# llm-finetuning

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
logger/: log.py
src/: env.py
src/data_preprocessing/: data_ingestion.py  data_split.py
