[project]
name = "llm-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.27.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.16.0",
    "numpy>=2.4.1",
    "peft>=0.8.2",
    "protobuf>=6.33.4",
    "scipy>=1.17.0",
    "sentencepiece>=0.2.1",
    "torch>=2.1.0",
    "tqdm>=4.67.1",
    "transformers>=4.38.0",
    "trl>=0.7.10",
    "unsloth>=0.3.0",
    "uvicorn>=0.40.0",
]
